manifests/opentelemetry-operator/components/talos/0.120.0/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry-operator
  labels:
    shared-gateway-access: "true"
