manifests/opentelemetry-operator/components/talos/0.120.0/pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: "opentelemetry-operator-cert-manager"
  namespace: opentelemetry-operator
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.156.0"
    app.kubernetes.io/part-of: opentelemetry-operator
    app.kubernetes.io/instance: opentelemetry-operator
    app.kubernetes.io/component: webhook
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: "busybox:latest"
      command:
        - sh
        - -c
        # The following shell script tests if the cert-manager service is up. If the service is up, when we try
        # to wget its exposed port, we will get an HTTP error 400.
        - |
          i=0
          while [ "$i" -lt 30 ]; do
            wget_output=$(wget -q "$CERT_MANAGER_CLUSTERIP:$CERT_MANAGER_PORT" 2>&1 || true)
            if [ "$wget_output" = "wget: server returned error: HTTP/1.0 400 Bad Request" ]; then
              exit 0
            fi
            i=$((i + 1))
            sleep 2
          done
          echo "$wget_output"
          exit 1
      securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
  restartPolicy: Never
  nodeSelector:
    kubernetes.io/os: linux
  securityContext:
    fsGroup: 65532
    runAsGroup: 65532
    runAsNonRoot: true
    runAsUser: 65532
---
apiVersion: v1
kind: Pod
metadata:
  name: "opentelemetry-operator-metrics-test"
  namespace: opentelemetry-operator
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.156.0"
    app.kubernetes.io/part-of: opentelemetry-operator
    app.kubernetes.io/instance: opentelemetry-operator
    app.kubernetes.io/component: controller-manager
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: "busybox:latest"
      command:
        - sh
        - -c
        # The following shell script tests if the controller-manager-metrics-service is up.
        # If the service is up, when we try to wget its exposed port, we will get an HTTP error 400.
        - |
          i=0
          while [ "$i" -lt 30 ]; do
            wget_output=$(wget -q "$MANAGER_METRICS_SERVICE_CLUSTERIP:$MANAGER_METRICS_SERVICE_PORT" 2>&1 || true)
            if [ "$wget_output" = "wget: server returned error: HTTP/1.0 400 Bad Request" ]; then
              exit 0
            fi
            i=$((i + 1))
            sleep 2
          done
          echo "$wget_output"
          exit 1
      securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
  restartPolicy: Never
  nodeSelector:
    kubernetes.io/os: linux
  securityContext:
    fsGroup: 65532
    runAsGroup: 65532
    runAsNonRoot: true
    runAsUser: 65532
---
apiVersion: v1
kind: Pod
metadata:
  name: "opentelemetry-operator-webhook-test"
  namespace: opentelemetry-operator
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.156.0"
    app.kubernetes.io/part-of: opentelemetry-operator
    app.kubernetes.io/instance: opentelemetry-operator
    app.kubernetes.io/component: controller-manager
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: "busybox:latest"
      command:
        - sh
        - -c
        # The following shell script tests if the webhook service is up. If the service is up, when we try
        # to wget its exposed port, we will get an HTTP error 400.
        - |
          i=0
          while [ "$i" -lt 30 ]; do
            wget_output=$(wget -q "$WEBHOOK_SERVICE_CLUSTERIP:$WEBHOOK_SERVICE_PORT" 2>&1 || true)
            if [ "$wget_output" = "wget: server returned error: HTTP/1.0 400 Bad Request" ]; then
              exit 0
            fi
            i=$((i + 1))
            sleep 2
          done
          echo "$wget_output"
          exit 1
      securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
  restartPolicy: Never
  nodeSelector:
    kubernetes.io/os: linux
  securityContext:
    fsGroup: 65532
    runAsGroup: 65532
    runAsNonRoot: true
    runAsUser: 65532
