manifests/opentelemetry-operator/components/talos/0.120.0/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.156.0"
    app.kubernetes.io/part-of: opentelemetry-operator
    app.kubernetes.io/instance: opentelemetry-operator
    app.kubernetes.io/component: controller-manager
  name: opentelemetry-operator
  namespace: opentelemetry-operator
spec:
  ports:
    - name: metrics
      port: 8443
      protocol: TCP
      targetPort: metrics
  selector:
      app.kubernetes.io/name: opentelemetry-operator
      app.kubernetes.io/component: controller-manager
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/version: "0.156.0"
    app.kubernetes.io/part-of: opentelemetry-operator
    app.kubernetes.io/instance: opentelemetry-operator
    app.kubernetes.io/component: controller-manager
  name: opentelemetry-operator-webhook
  namespace: opentelemetry-operator
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: webhook-server
  selector:
      app.kubernetes.io/name: opentelemetry-operator
      app.kubernetes.io/component: controller-manager
